[gd_scene load_steps=20 format=3 uid="uid://b83wy72uhr47y"]

[ext_resource type="Script" uid="uid://qlosnl15lnhh" path="res://scripts/skeleton.gd" id="1_yag7t"]
[ext_resource type="Texture2D" uid="uid://bhhteyurcjnor" path="res://sprites/3 - Skeleton/Crumbling_Into_Bone_Pile (32 x 32).png" id="2_fpmxe"]
[ext_resource type="Texture2D" uid="uid://ctj2ygu3rh6tq" path="res://sprites/3 - Skeleton/Limping_Movement (32 x 32).png" id="3_4oc3b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr2a"]
atlas = ExtResource("2_fpmxe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j31jw"]
atlas = ExtResource("2_fpmxe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx6xw"]
atlas = ExtResource("2_fpmxe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mssj4"]
atlas = ExtResource("2_fpmxe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kifd"]
atlas = ExtResource("2_fpmxe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsvvn"]
atlas = ExtResource("2_fpmxe")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oayfp"]
atlas = ExtResource("2_fpmxe")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qj8h"]
atlas = ExtResource("3_4oc3b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sdy1"]
atlas = ExtResource("3_4oc3b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu166"]
atlas = ExtResource("3_4oc3b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lem8q"]
atlas = ExtResource("3_4oc3b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp68x"]
atlas = ExtResource("3_4oc3b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckyi2"]
atlas = ExtResource("3_4oc3b")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yag7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j31jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx6xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mssj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kifd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsvvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oayfp")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qj8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sdy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu166")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lem8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp68x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyi2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fpmxe"]
radius = 7.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yag7t"]
size = Vector2(13, 26)

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_yag7t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yag7t")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_fpmxe")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_yag7t")
debug_color = Color(0.952441, 9.62615e-07, 0.558625, 0.42)

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(2, 13)
target_position = Vector2(10, 0)

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2(12, 0)
target_position = Vector2(0, 21)

[node name="ClearTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="ClearTimer" to="." method="_on_clear_timer_timeout"]
